--- a/01-dom/template-03.html
+++ b/01-dom/template-03.html
@@ -38,12 +38,12 @@
 						<div class="row">
 							<div class="col">
 								<div id="app">
-                                    <p class="teste1" v-once> {{ titulo }} </p>
-									<input type="text" v-on:input="alteraTexto">
-									<p id="teste2"> {{ saudacao() }} </p>
-									<p>Aqui o método <b>acessaTitulo()</b> está acessando o título: {{ acessaTitulo() }} </p>
-									<p><a v-bind:href="linkGoogle" target="_blank">GOOOOOGLE</a></p>
-									<p edu-bind="333" diretiva-qualquer="123">Teste de diretiva personalizada</p>
+									<span>{{ linkHTML }}</span>
+									<span><b> - modo errado</b></span>
+									<br>
+									<span v-html="linkHTML"></span>
+									<span><b> modo - certo</b></span>
+									<!-- Uma vez que estamos trabalhando dentro de um contexto de uma propriedade, nós vamos usar diretamente o nome dela sem o double mustache -->
                                 </div>
 							</div>
 						</div>
@@ -54,22 +54,10 @@
 	</main>
 	<!--/CONTEÚDO PRINCIPAL-->
 
-	<!--FOOTER-->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h6>RODAPÉ / FOOTER</h6>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!--/FOOTER-->
-
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="../assets/scripts/dom.js"></script>
+    <script src="../assets/scripts/imprimir-html.js"></script>
 </body>
 
 </html>
