--- a/01-dom/desafio.html
+++ b/01-dom/desafio.html
@@ -55,13 +55,13 @@
 									</p>
 
 									<!-- 4) Procure uma imagem no google e exiba na tag img fazendo um binding no atributo "src"-->
-									<div>
-										<img height="400" alt="">
+									<div class="mb-5">
+										<img class="rounded shadow" v-bind:src="image" height="400" alt="">
 									</div>
 
 									<!-- 5) Inicialize o input com o seu nome (use o atrubuto "value") -->
 									<div>
-										<input type="text">
+										<input type="text" v-bind:value="nome">
 									</div>
 
 								</div>
