Inclusao de funçao para multiplicaçao da idade

--- a/01-dom/desafio.html
+++ b/01-dom/desafio.html
@@ -48,6 +48,9 @@
 									<p>
 										Minha idade x 7 é: <span class="text-primary">{{ idade * 7 }}</span>
 									</p>
+									<p>
+										Minha idade x 3 é: <span class="text-primary">{{ idadeVezes3() }}</span>
+									</p>
 
 									<!-- 3) Chamar uma função para exibir um número randômico entre 0 e 1 (Math.random()) -->
 									<p>
