--- a/01-dom/05-eventos.html
+++ b/01-dom/05-eventos.html
@@ -26,6 +26,8 @@
 						<div class="row">
 							<div class="col">
 								<div id="app">
+
+									<!-- EXERCÍCIO EVENTOS - 01 - CHAMANDO UMA FUNÇÃO A PARTIR DE UM EVENTO SEM PASSAR PARÂMETROS -->
                                     <p>
 										Aqui o contador irá somar +1 : <span class="text-warning">{{ contador }}</span>
 									</p>
@@ -34,7 +36,21 @@
 										<br>
 										Mas o console.log está mostrando o incremento.
 									</p>
-									<button class="btn btn-outline-light" v-on:click="somar()">Somar 1</button>
+									<button class="btn btn-outline-light mb-5" v-on:click="somar()">Somar 1</button> 
+
+									<!-- EXERCÍCIO EVENTOS - 02 - CHAMANDO UMA FUNÇÃO PASSANDO UM EVENTO, NO CASO, O MOUSEMOVE -->
+									<p class="border p-3 mb-5" v-on:mousemove="atualizarXY">
+										Posição do mouse em:
+										<br> EIXO X: <span class="text-warning">{{ x }}</span> 
+										<br> EIXO Y: <span class="text-warning">{{ y }}</span>
+									</p>
+
+									<!-- EXERCÍCIO EVENTOS - 03 - CHAMANDO FUNÇÃO PASSANDO PARÂMETRO PERSONALIZADO E TAMBÉM UM EVENTO ($event) -->
+									<p>
+										Aqui o contador irá somar +{{ cinco }} : <span class="text-warning">{{ contador5 }}</span>
+									</p>
+									<button class="btn btn-outline-light mb-5" v-on:click="somar5($event)">Somar {{ cinco }}</button> 
+									<!-- Aqui, o $event é uma palavra reservada para designar o evento, quando a função já está recebendo algum outro parâmetro -->
                                 </div>
 							</div>
 						</div>
