--- a/01-dom/12-estilo-dinamico.html
+++ b/01-dom/12-estilo-dinamico.html
@@ -17,18 +17,6 @@
 
 <body>
 
-	<!--HEADER E MENU-->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h3>Propriedades reativas:  DESAFIO</h3>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!--/HEADER E MENU-->
-
 	<!--CONTEÚDO PRINCIPAL-->
 	<main>
 		<div class="container">
@@ -37,21 +25,16 @@
 					<section>
 						<div class="row">
 							<div class="col">
-								<div id="app">
-                                    <!-- 
-                                        1) Exibir em "resultado" o texto "Valor diferente" enquanto o "valor" for diferente de 13
-
-                                        2) Monitorer as mudanças de "resultado" e reiniciar "valor" para 0 depois de 5 segundos 
-                                        (dica: setTimeout(..., 500))
-                                     -->
-
-                                     <button class="btn btn-outline-danger mb-3 mr-2" @click="valor += 5">Somar 5</button>
-                                     <button class="btn btn-outline-danger mb-3 mr-2" @click="valor += 1">Somar 1</button>
-									 <br>
-									 <button class="btn btn-outline-danger mb-3 mr-2" @click="valor -= 5">Diminuir 5</button>
-                                     <button class="btn btn-outline-danger mb-3 mr-2" @click="valor -= 1">Diminuir 1</button>
-                                     <p>Valor atual: {{ valor }}</p>
-                                     <p class="mt-3">Resultado: {{ resultado }}</p>
+								<div id="app" class="dinamico">
+                                    <div class="demo" :class="{'cor-1' : aplicarCor1}" @click="aplicarCor1 = !aplicarCor1">
+                                        click me
+                                    </div>
+                                    <div class="demo" :class="{'cor-2' : aplicarCor2}" @click="aplicarCor2 = !aplicarCor2">
+                                        click me
+                                    </div>
+                                    <div class="demo" :class="{'cor-3' : aplicarCor3}" @click="aplicarCor3 = !aplicarCor3">
+                                        click me
+                                    </div>
                                 </div>
 							</div>
 						</div>
@@ -65,7 +48,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="../assets/scripts/11-desafio.js"></script>
+    <script src="../assets/scripts/12-estilo-dinamico.js"></script>
 </body>
 
 </html>
