ultimo exercicio de listas

--- a/02-condicionais-e listas/02-listas.html
+++ b/02-condicionais-e listas/02-listas.html
@@ -57,6 +57,11 @@
 										</li>
 									</ul>
 									<input type="text" placeholder="TESTE">
+
+									<hr>
+
+									<span class="coma" v-for="n in 10"> {{ n }} </span>
+
 								</div>
 							</div>
 						</div>
